--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
           >
           <ul class="header-list">
             <li class="header-list-item-nav">
-              <a href="./index.html" class="header-list-item">Studio </a>
+              <a href="./index.html" class="header-list-item current"
+                >Studio
+              </a>
             </li>
             <li class="header-list-item-nav">
               <a href="" class="header-list-item">Portfolio </a>
@@ -69,6 +71,11 @@
           <h2 class="visually-hidden">Our Benefits</h2>
           <ul class="benefits-list">
             <li class="benefits-list-item">
+              <div class="benefits-list-icon">
+                <svg class="icon" width="64px" height="64px">
+                  <use href="./images/symbol-defs.svg#icon-antenna-1"></use>
+                </svg>
+              </div>
               <h3 class="benefits-list-item-head">Strategy</h3>
               <p class="benefits-list-item-text">
                 Our goal is to identify the business problem to walk away with
@@ -76,6 +83,11 @@
               </p>
             </li>
             <li class="benefits-list-item">
+              <div class="benefits-list-icon">
+                <svg class="icon" width="64px" height="64px">
+                  <use href="./images/symbol-defs.svg#icon-clock-1"></use>
+                </svg>
+              </div>
               <h3 class="benefits-list-item-head">Punctuality</h3>
               <p class="benefits-list-item-text">
                 Bring the key message to the brand's audience for the best price
@@ -83,6 +95,11 @@
               </p>
             </li>
             <li class="benefits-list-item">
+              <div class="benefits-list-icon">
+                <svg class="icon" width="64px" height="64px">
+                  <use href="./images/symbol-defs.svg#icon-diagram-1"></use>
+                </svg>
+              </div>
               <h3 class="benefits-list-item-head">Diligence</h3>
               <p class="benefits-list-item-text">
                 Research and confirm brands with the strongest digital growth
@@ -90,6 +107,11 @@
               </p>
             </li>
             <li class="benefits-list-item">
+              <div class="benefits-list-icon">
+                <svg class="icon" width="64px" height="64px">
+                  <use href="./images/symbol-defs.svg#icon-astronaut-1"></use>
+                </svg>
+              </div>
               <h3 class="benefits-list-item-head">Technologies</h3>
               <p class="benefits-list-item-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -113,6 +135,56 @@
               <div class="team-list-name">
                 <h3 class="team-list-head">Mark Guerrero</h3>
                 <p class="team-list-text">Product Designer</p>
+                <ul class="team-list-icon">
+                  <li class="team-list-item-icon">
+                    <a
+                      href="https://www.instagram.com/"
+                      target="_blank"
+                      class="team-icon-border"
+                      ><svg class="icon team-icon" width="16px" height="16px">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-item-icon">
+                    <a
+                      href="https://x.com/"
+                      target="_blank"
+                      class="team-icon-border"
+                      ><svg class="icon team-icon" width="16px" height="16px">
+                        <use
+                          href="./images/symbol-defs.svg#icon-twitter-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-item-icon">
+                    <a
+                      href="https://www.facebook.com/"
+                      target="_blank"
+                      class="team-icon-border"
+                      ><svg class="icon team-icon" width="16px" height="16px">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-item-icon">
+                    <a
+                      href="https://linkedin.com/"
+                      target="_blank"
+                      class="team-icon-border"
+                      ><svg class="icon team-icon" width="16px" height="16px">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item">
@@ -125,6 +197,56 @@
               <div class="team-list-name">
                 <h3 class="team-list-head">Tom Ford</h3>
                 <p class="team-list-text">Frontend Developer</p>
+                <ul class="team-list-icon">
+                  <li class="team-list-item-icon">
+                    <a
+                      href="https://www.instagram.com/"
+                      target="_blank"
+                      class="team-icon-border"
+                      ><svg class="icon team-icon" width="16px" height="16px">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-item-icon">
+                    <a
+                      href="https://x.com/"
+                      target="_blank"
+                      class="team-icon-border"
+                      ><svg class="icon team-icon" width="16px" height="16px">
+                        <use
+                          href="./images/symbol-defs.svg#icon-twitter-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-item-icon">
+                    <a
+                      href="https://www.facebook.com/"
+                      target="_blank"
+                      class="team-icon-border"
+                      ><svg class="icon team-icon" width="16px" height="16px">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-item-icon">
+                    <a
+                      href="https://linkedin.com/"
+                      target="_blank"
+                      class="team-icon-border"
+                      ><svg class="icon team-icon" width="16px" height="16px">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item">
@@ -137,6 +259,56 @@
               <div class="team-list-name">
                 <h3 class="team-list-head">Camila Garcia</h3>
                 <p class="team-list-text">Marketing</p>
+                <ul class="team-list-icon">
+                  <li class="team-list-item-icon">
+                    <a
+                      href="https://www.instagram.com/"
+                      target="_blank"
+                      class="team-icon-border"
+                      ><svg class="icon team-icon" width="16px" height="16px">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-item-icon">
+                    <a
+                      href="https://x.com/"
+                      target="_blank"
+                      class="team-icon-border"
+                      ><svg class="icon team-icon" width="16px" height="16px">
+                        <use
+                          href="./images/symbol-defs.svg#icon-twitter-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-item-icon">
+                    <a
+                      href="https://www.facebook.com/"
+                      target="_blank"
+                      class="team-icon-border"
+                      ><svg class="icon team-icon" width="16px" height="16px">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-item-icon">
+                    <a
+                      href="https://linkedin.com/"
+                      target="_blank"
+                      class="team-icon-border"
+                      ><svg class="icon team-icon" width="16px" height="16px">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item">
@@ -149,6 +321,56 @@
               <div class="team-list-name">
                 <h3 class="team-list-head">Daniel Wilson</h3>
                 <p class="team-list-text">UI Designer</p>
+                <ul class="team-list-icon">
+                  <li class="team-list-item-icon">
+                    <a
+                      href="https://www.instagram.com/"
+                      target="_blank"
+                      class="team-icon-border"
+                      ><svg class="icon team-icon" width="16px" height="16px">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-item-icon">
+                    <a
+                      href="https://x.com/"
+                      target="_blank"
+                      class="team-icon-border"
+                      ><svg class="icon team-icon" width="16px" height="16px">
+                        <use
+                          href="./images/symbol-defs.svg#icon-twitter-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-item-icon">
+                    <a
+                      href="https://www.facebook.com/"
+                      target="_blank"
+                      class="team-icon-border"
+                      ><svg class="icon team-icon" width="16px" height="16px">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-item-icon">
+                    <a
+                      href="https://linkedin.com/"
+                      target="_blank"
+                      class="team-icon-border"
+                      ><svg class="icon team-icon" width="16px" height="16px">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -159,72 +381,132 @@
           <h2 class="porfolio-head">Our Portfolio</h2>
           <ul class="porfolio-list">
             <li class="porfolio-list-item">
-              <img
-                src="./images/img-1-min.jpg"
-                alt="banking app"
-                width="360"
-                height="300"
-              />
+              <div class="table">
+                <img
+                  src="./images/img-1-min.jpg"
+                  alt="banking app"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
+
               <div class="porfolio-name">
                 <h3 class="porfolio-list-head">Banking App</h3>
                 <p class="porfolio-list-text">App</p>
               </div>
             </li>
             <li class="porfolio-list-item">
-              <img
-                src="./images/img-2-min.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
+              <div class="table">
+                <img
+                  src="./images/img-2-min.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
+
               <div class="porfolio-name">
                 <h3 class="porfolio-list-head">Cashless Payment</h3>
                 <p class="porfolio-list-text">Marketing</p>
               </div>
             </li>
             <li class="porfolio-list-item">
-              <img
-                src="./images/img-3-min.jpg"
-                alt="Meditation app"
-                width="360"
-                height="300"
-              />
+              <div class="table">
+                <img
+                  src="./images/img-3-min.jpg"
+                  alt="Meditation app"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
+
               <div class="porfolio-name">
                 <h3 class="porfolio-list-head">Meditation App</h3>
                 <p class="porfolio-list-text">App</p>
               </div>
             </li>
             <li class="porfolio-list-item">
-              <img
-                src="./images/img-4-min.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
+              <div class="table">
+                <img
+                  src="./images/img-4-min.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
+
               <div class="porfolio-name">
                 <h3 class="porfolio-list-head">Taxi Service</h3>
                 <p class="porfolio-list-text">Marketing</p>
               </div>
             </li>
             <li class="porfolio-list-item">
-              <img
-                src="./images/img-5-min.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
+              <div class="table">
+                <img
+                  src="./images/img-5-min.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
+
               <div class="porfolio-name">
                 <h3 class="porfolio-list-head">Screen Illustrations</h3>
                 <p class="porfolio-list-text">Design</p>
               </div>
             </li>
             <li class="porfolio-list-item">
-              <img
-                src="./images/img-6-min.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
+              <div class="table">
+                <img
+                  src="./images/img-6-min.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
+
               <div class="porfolio-name">
                 <h3 class="porfolio-list-head">Online Courses</h3>
                 <p class="porfolio-list-text">Marketing</p>
