--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <li class="benefits-list-item">
               <div class="benefits-list-icon">
                 <svg class="icon" width="64px" height="64px">
-                  <use href="./images/symbol-defs.svg#icon-antenna-1"></use>
+                  <use href="./images/icons.svg#icon-antenna-1"></use>
                 </svg>
               </div>
               <h3 class="benefits-list-item-head">Strategy</h3>
@@ -85,7 +85,7 @@
             <li class="benefits-list-item">
               <div class="benefits-list-icon">
                 <svg class="icon" width="64px" height="64px">
-                  <use href="./images/symbol-defs.svg#icon-clock-1"></use>
+                  <use href="./images/icons.svg#icon-clock-1"></use>
                 </svg>
               </div>
               <h3 class="benefits-list-item-head">Punctuality</h3>
@@ -97,7 +97,7 @@
             <li class="benefits-list-item">
               <div class="benefits-list-icon">
                 <svg class="icon" width="64px" height="64px">
-                  <use href="./images/symbol-defs.svg#icon-diagram-1"></use>
+                  <use href="./images/icons.svg#icon-diagram-1"></use>
                 </svg>
               </div>
               <h3 class="benefits-list-item-head">Diligence</h3>
@@ -109,7 +109,7 @@
             <li class="benefits-list-item">
               <div class="benefits-list-icon">
                 <svg class="icon" width="64px" height="64px">
-                  <use href="./images/symbol-defs.svg#icon-astronaut-1"></use>
+                  <use href="./images/icons.svg#icon-astronaut-1"></use>
                 </svg>
               </div>
               <h3 class="benefits-list-item-head">Technologies</h3>
@@ -142,9 +142,7 @@
                       target="_blank"
                       class="team-icon-border"
                       ><svg class="icon team-icon" width="16px" height="16px">
-                        <use
-                          href="./images/symbol-defs.svg#icon-instagram-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
@@ -154,9 +152,7 @@
                       target="_blank"
                       class="team-icon-border"
                       ><svg class="icon team-icon" width="16px" height="16px">
-                        <use
-                          href="./images/symbol-defs.svg#icon-twitter-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -166,9 +162,7 @@
                       target="_blank"
                       class="team-icon-border"
                       ><svg class="icon team-icon" width="16px" height="16px">
-                        <use
-                          href="./images/symbol-defs.svg#icon-facebook-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -178,9 +172,7 @@
                       target="_blank"
                       class="team-icon-border"
                       ><svg class="icon team-icon" width="16px" height="16px">
-                        <use
-                          href="./images/symbol-defs.svg#icon-linkedin-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -204,9 +196,7 @@
                       target="_blank"
                       class="team-icon-border"
                       ><svg class="icon team-icon" width="16px" height="16px">
-                        <use
-                          href="./images/symbol-defs.svg#icon-instagram-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
@@ -216,9 +206,7 @@
                       target="_blank"
                       class="team-icon-border"
                       ><svg class="icon team-icon" width="16px" height="16px">
-                        <use
-                          href="./images/symbol-defs.svg#icon-twitter-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -228,9 +216,7 @@
                       target="_blank"
                       class="team-icon-border"
                       ><svg class="icon team-icon" width="16px" height="16px">
-                        <use
-                          href="./images/symbol-defs.svg#icon-facebook-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -240,9 +226,7 @@
                       target="_blank"
                       class="team-icon-border"
                       ><svg class="icon team-icon" width="16px" height="16px">
-                        <use
-                          href="./images/symbol-defs.svg#icon-linkedin-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -266,9 +250,7 @@
                       target="_blank"
                       class="team-icon-border"
                       ><svg class="icon team-icon" width="16px" height="16px">
-                        <use
-                          href="./images/symbol-defs.svg#icon-instagram-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
@@ -278,9 +260,7 @@
                       target="_blank"
                       class="team-icon-border"
                       ><svg class="icon team-icon" width="16px" height="16px">
-                        <use
-                          href="./images/symbol-defs.svg#icon-twitter-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -290,9 +270,7 @@
                       target="_blank"
                       class="team-icon-border"
                       ><svg class="icon team-icon" width="16px" height="16px">
-                        <use
-                          href="./images/symbol-defs.svg#icon-facebook-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -302,9 +280,7 @@
                       target="_blank"
                       class="team-icon-border"
                       ><svg class="icon team-icon" width="16px" height="16px">
-                        <use
-                          href="./images/symbol-defs.svg#icon-linkedin-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -328,9 +304,7 @@
                       target="_blank"
                       class="team-icon-border"
                       ><svg class="icon team-icon" width="16px" height="16px">
-                        <use
-                          href="./images/symbol-defs.svg#icon-instagram-2"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
@@ -340,9 +314,7 @@
                       target="_blank"
                       class="team-icon-border"
                       ><svg class="icon team-icon" width="16px" height="16px">
-                        <use
-                          href="./images/symbol-defs.svg#icon-twitter-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -352,9 +324,7 @@
                       target="_blank"
                       class="team-icon-border"
                       ><svg class="icon team-icon" width="16px" height="16px">
-                        <use
-                          href="./images/symbol-defs.svg#icon-facebook-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -364,9 +334,7 @@
                       target="_blank"
                       class="team-icon-border"
                       ><svg class="icon team-icon" width="16px" height="16px">
-                        <use
-                          href="./images/symbol-defs.svg#icon-linkedin-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -518,14 +486,61 @@
     </main>
 
     <footer class="footer">
-      <div class="container">
-        <a href="./index.html" class="footer-logo"
-          >Web<span class="logo-header-text">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-container">
+        <div class="footer-logo-container">
+          <a href="./index.html" class="footer-logo"
+            >Web<span class="logo-header-text">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="social-media">
+          <p class="social-media-text">Social media</p>
+          <ul class="footer-list-icon">
+            <li class="team-list-item-icon">
+              <a
+                href="https://www.instagram.com/"
+                target="_blank"
+                class="footer-icon-border"
+                ><svg class="icon footer-icon" width="24px" height="24px">
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="team-list-item-icon">
+              <a
+                href="https://x.com/"
+                target="_blank"
+                class="footer-icon-border"
+                ><svg class="icon footer-icon" width="24px" height="24px">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="team-list-item-icon">
+              <a
+                href="https://www.facebook.com/"
+                target="_blank"
+                class="footer-icon-border"
+                ><svg class="icon footer-icon" width="24px" height="24px">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="team-list-item-icon">
+              <a
+                href="https://linkedin.com/"
+                target="_blank"
+                class="footer-icon-border"
+                ><svg class="icon footer-icon" width="24px" height="24px">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
