--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <ul class="benefits-list">
             <li class="benefits-list-item">
               <div class="benefits-list-icon">
-                <svg class="icon" width="64px" height="64px">
+                <svg class="icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-antenna-1"></use>
                 </svg>
               </div>
@@ -84,7 +84,7 @@
             </li>
             <li class="benefits-list-item">
               <div class="benefits-list-icon">
-                <svg class="icon" width="64px" height="64px">
+                <svg class="icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-clock-1"></use>
                 </svg>
               </div>
@@ -96,7 +96,7 @@
             </li>
             <li class="benefits-list-item">
               <div class="benefits-list-icon">
-                <svg class="icon" width="64px" height="64px">
+                <svg class="icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-diagram-1"></use>
                 </svg>
               </div>
@@ -108,7 +108,7 @@
             </li>
             <li class="benefits-list-item">
               <div class="benefits-list-icon">
-                <svg class="icon" width="64px" height="64px">
+                <svg class="icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-astronaut-1"></use>
                 </svg>
               </div>
@@ -141,7 +141,7 @@
                       href="https://www.instagram.com/"
                       target="_blank"
                       class="team-icon-border"
-                      ><svg class="icon team-icon" width="16px" height="16px">
+                      ><svg class="icon team-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
@@ -151,7 +151,7 @@
                       href="https://x.com/"
                       target="_blank"
                       class="team-icon-border"
-                      ><svg class="icon team-icon" width="16px" height="16px">
+                      ><svg class="icon team-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
@@ -161,7 +161,7 @@
                       href="https://www.facebook.com/"
                       target="_blank"
                       class="team-icon-border"
-                      ><svg class="icon team-icon" width="16px" height="16px">
+                      ><svg class="icon team-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
@@ -171,7 +171,7 @@
                       href="https://linkedin.com/"
                       target="_blank"
                       class="team-icon-border"
-                      ><svg class="icon team-icon" width="16px" height="16px">
+                      ><svg class="icon team-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
@@ -195,7 +195,7 @@
                       href="https://www.instagram.com/"
                       target="_blank"
                       class="team-icon-border"
-                      ><svg class="icon team-icon" width="16px" height="16px">
+                      ><svg class="icon team-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
@@ -205,7 +205,7 @@
                       href="https://x.com/"
                       target="_blank"
                       class="team-icon-border"
-                      ><svg class="icon team-icon" width="16px" height="16px">
+                      ><svg class="icon team-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
@@ -215,7 +215,7 @@
                       href="https://www.facebook.com/"
                       target="_blank"
                       class="team-icon-border"
-                      ><svg class="icon team-icon" width="16px" height="16px">
+                      ><svg class="icon team-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
@@ -225,7 +225,7 @@
                       href="https://linkedin.com/"
                       target="_blank"
                       class="team-icon-border"
-                      ><svg class="icon team-icon" width="16px" height="16px">
+                      ><svg class="icon team-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
@@ -249,7 +249,7 @@
                       href="https://www.instagram.com/"
                       target="_blank"
                       class="team-icon-border"
-                      ><svg class="icon team-icon" width="16px" height="16px">
+                      ><svg class="icon team-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
@@ -259,7 +259,7 @@
                       href="https://x.com/"
                       target="_blank"
                       class="team-icon-border"
-                      ><svg class="icon team-icon" width="16px" height="16px">
+                      ><svg class="icon team-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
@@ -269,7 +269,7 @@
                       href="https://www.facebook.com/"
                       target="_blank"
                       class="team-icon-border"
-                      ><svg class="icon team-icon" width="16px" height="16px">
+                      ><svg class="icon team-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
@@ -279,7 +279,7 @@
                       href="https://linkedin.com/"
                       target="_blank"
                       class="team-icon-border"
-                      ><svg class="icon team-icon" width="16px" height="16px">
+                      ><svg class="icon team-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
@@ -303,7 +303,7 @@
                       href="https://www.instagram.com/"
                       target="_blank"
                       class="team-icon-border"
-                      ><svg class="icon team-icon" width="16px" height="16px">
+                      ><svg class="icon team-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
@@ -313,7 +313,7 @@
                       href="https://x.com/"
                       target="_blank"
                       class="team-icon-border"
-                      ><svg class="icon team-icon" width="16px" height="16px">
+                      ><svg class="icon team-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
@@ -323,7 +323,7 @@
                       href="https://www.facebook.com/"
                       target="_blank"
                       class="team-icon-border"
-                      ><svg class="icon team-icon" width="16px" height="16px">
+                      ><svg class="icon team-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
@@ -333,7 +333,7 @@
                       href="https://linkedin.com/"
                       target="_blank"
                       class="team-icon-border"
-                      ><svg class="icon team-icon" width="16px" height="16px">
+                      ><svg class="icon team-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
@@ -356,13 +356,12 @@
                   width="360"
                   height="300"
                 />
-                <div class="overlay">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
 
               <div class="porfolio-name">
@@ -378,13 +377,12 @@
                   width="360"
                   height="300"
                 />
-                <div class="overlay">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
 
               <div class="porfolio-name">
@@ -400,13 +398,12 @@
                   width="360"
                   height="300"
                 />
-                <div class="overlay">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
 
               <div class="porfolio-name">
@@ -422,13 +419,12 @@
                   width="360"
                   height="300"
                 />
-                <div class="overlay">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
 
               <div class="porfolio-name">
@@ -444,13 +440,12 @@
                   width="360"
                   height="300"
                 />
-                <div class="overlay">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
 
               <div class="porfolio-name">
@@ -466,13 +461,12 @@
                   width="360"
                   height="300"
                 />
-                <div class="overlay">
-                  <p class="overlay-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+
+                <p class="overlay-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
 
               <div class="porfolio-name">
@@ -504,7 +498,7 @@
                 href="https://www.instagram.com/"
                 target="_blank"
                 class="footer-icon-border"
-                ><svg class="icon footer-icon" width="24px" height="24px">
+                ><svg class="icon footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg>
               </a>
@@ -514,7 +508,7 @@
                 href="https://x.com/"
                 target="_blank"
                 class="footer-icon-border"
-                ><svg class="icon footer-icon" width="24px" height="24px">
+                ><svg class="icon footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg>
               </a>
@@ -524,7 +518,7 @@
                 href="https://www.facebook.com/"
                 target="_blank"
                 class="footer-icon-border"
-                ><svg class="icon footer-icon" width="24px" height="24px">
+                ><svg class="icon footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
               </a>
@@ -534,7 +528,7 @@
                 href="https://linkedin.com/"
                 target="_blank"
                 class="footer-icon-border"
-                ><svg class="icon footer-icon" width="24px" height="24px">
+                ><svg class="icon footer-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg>
               </a>
